@@ -20,6 +20,9 @@ setenv ORGANISM    86
 # Taxinomic ID
 setenv TAXID ${XENOPUSLAEVISTAXID}
 
+# Private flag for XEN ID (0 = no, 1 = yes)
+setenv XENPRIVATE       0
+
 # EntrezGene Synonym Type
 setenv SYNTYPEKEY    1029
 
