@@ -6,6 +6,7 @@ fl2/florida too/fl2-172/NRA_Driver: non-mouse entrezgene load analysis for curat
 add logic for expresses_component (1004)
 test logic for allele_to_driver (1006)
 deleteIDs.csh
+add frog, African clawed/Xenopus laevis (xenopuslaevis)
 
 TAG: entrezgeneload-6-0-22-2
 TAG: entrezgeneload-6-0-22-1
